parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> DeclFuncVar DeclProg
Rule 2     DeclFuncVar -> Tipo NOME DeclVar PVIRGULA DeclFuncVar
Rule 3     DeclFuncVar -> Tipo NOME ECOCHETE INT DCOCHETE DeclVar PVIRGULA DeclFuncVar
Rule 4     DeclFuncVar -> Tipo NOME DeclFunc DeclFuncVar
Rule 5     DeclFuncVar -> <empty>
Rule 6     DeclProg -> PROGRAMA Bloco
Rule 7     DeclVar -> VIRGULA NOME DeclVar
Rule 8     DeclVar -> VIRGULA NOME ECOCHETE INT DCOCHETE DeclVar
Rule 9     DeclVar -> <empty>
Rule 10    DeclFunc -> EPAREN ListaParametros DPAREN Bloco
Rule 11    ListaParametros -> <empty>
Rule 12    ListaParametros -> ListaParametrosCont
Rule 13    ListaParametrosCont -> Tipo NOME
Rule 14    ListaParametrosCont -> Tipo NOME ECOCHETE DCOCHETE
Rule 15    ListaParametrosCont -> Tipo NOME VIRGULA ListaParametrosCont
Rule 16    ListaParametrosCont -> Tipo NOME ECOCHETE DCOCHETE VIRGULA ListaParametrosCont
Rule 17    Bloco -> ECHAVES ListaDeclVar ListaComando DCHAVES
Rule 18    Bloco -> ECHAVES ListaDeclVar DCHAVES
Rule 19    ListaDeclVar -> <empty>
Rule 20    ListaDeclVar -> Tipo NOME DeclVar PVIRGULA ListaDeclVar
Rule 21    ListaDeclVar -> Tipo NOME ECOCHETE INT DCOCHETE DeclVar PVIRGULA ListaDeclVar
Rule 22    Tipo -> INT
Rule 23    Tipo -> CAR
Rule 24    ListaComando -> Comando
Rule 25    ListaComando -> Comando ListaComando
Rule 26    Comando -> PVIRGULA
Rule 27    Comando -> RETORNE Expr PVIRGULA
Rule 28    Comando -> LEIA LValueExpr PVIRGULA
Rule 29    Comando -> ESCREVA Expr PVIRGULA
Rule 30    Comando -> ESCREVA ASPASD NORMALSTRING ASPASD PVIRGULA
Rule 31    Comando -> NOVALINHA PVIRGULA
Rule 32    Comando -> SE EPAREN Expr DPAREN ENTAO Comando
Rule 33    Comando -> SE EPAREN Expr DPAREN ENTAO Comando SENAO Comando
Rule 34    Comando -> ENQUANTO EPAREN Expr DPAREN EXECUTE Comando
Rule 35    Comando -> Bloco
Rule 36    Expr -> AssignExpr
Rule 37    AssignExpr -> CondExpr
Rule 38    AssignExpr -> LValueExpr IGUAL AssignExpr
Rule 39    CondExpr -> OrExpr
Rule 40    CondExpr -> OrExpr INTERROGACAO Expr DOISP CondExpr
Rule 41    OrExpr -> OrExpr OU AndExpr
Rule 42    OrExpr -> AndExpr
Rule 43    AndExpr -> AndExpr E EqExpr
Rule 44    AndExpr -> EqExpr
Rule 45    EqExpr -> EqExpr ATRIBUICAO DesigExpr
Rule 46    EqExpr -> EqExpr DIFERENTE DesigExpr
Rule 47    EqExpr -> DesigExpr
Rule 48    DesigExpr -> DesigExpr MENOR AddExpr
Rule 49    DesigExpr -> DesigExpr MAIOR AddExpr
Rule 50    DesigExpr -> DesigExpr MAIORIGUAL AddExpr
Rule 51    DesigExpr -> DesigExpr MENORIGUAL AddExpr
Rule 52    DesigExpr -> AddExpr
Rule 53    AddExpr -> AddExpr MAIS MulExpr
Rule 54    AddExpr -> AddExpr MENOS MulExpr
Rule 55    AddExpr -> MulExpr
Rule 56    MulExpr -> MulExpr MULTIPLICACAO UnExpr
Rule 57    MulExpr -> MulExpr DIVIDE UnExpr
Rule 58    MulExpr -> MulExpr MOD UnExpr
Rule 59    MulExpr -> UnExpr
Rule 60    UnExpr -> MENOS PrimExpr
Rule 61    UnExpr -> EXCLAMACAO PrimExpr
Rule 62    UnExpr -> PrimExpr
Rule 63    LValueExpr -> NOME ECOCHETE Expr DCOCHETE
Rule 64    LValueExpr -> NOME
Rule 65    PrimExpr -> NOME EPAREN ListExpr DPAREN
Rule 66    PrimExpr -> NOME EPAREN DPAREN
Rule 67    PrimExpr -> NOME ECOCHETE Expr DCOCHETE
Rule 68    PrimExpr -> NOME
Rule 69    PrimExpr -> NUMERO
Rule 70    PrimExpr -> CAR
Rule 71    PrimExpr -> INT
Rule 72    PrimExpr -> EPAREN Expr DPAREN
Rule 73    ListExpr -> AssignExpr
Rule 74    ListExpr -> ListExpr VIRGULA AssignExpr

Terminals, with rules where they appear

ASPASD               : 30 30
ATRIBUICAO           : 45
CAR                  : 23 70
DCHAVES              : 17 18
DCOCHETE             : 3 8 14 16 21 63 67
DIFERENTE            : 46
DIVIDE               : 57
DOISP                : 40
DPAREN               : 10 32 33 34 65 66 72
E                    : 43
ECHAVES              : 17 18
ECOCHETE             : 3 8 14 16 21 63 67
ENQUANTO             : 34
ENTAO                : 32 33
EPAREN               : 10 32 33 34 65 66 72
ESCREVA              : 29 30
EXCLAMACAO           : 61
EXECUTE              : 34
IGUAL                : 38
INT                  : 3 8 21 22 71
INTERROGACAO         : 40
LEIA                 : 28
MAIOR                : 49
MAIORIGUAL           : 50
MAIS                 : 53
MENOR                : 48
MENORIGUAL           : 51
MENOS                : 54 60
MOD                  : 58
MULTIPLICACAO        : 56
NOME                 : 2 3 4 7 8 13 14 15 16 20 21 63 64 65 66 67 68
NORMALSTRING         : 30
NOVALINHA            : 31
NUMERO               : 69
OU                   : 41
PROGRAMA             : 6
PVIRGULA             : 2 3 20 21 26 27 28 29 30 31
RETORNE              : 27
SE                   : 32 33
SENAO                : 33
VIRGULA              : 7 8 15 16 74
error                : 

Nonterminals, with rules where they appear

AddExpr              : 48 49 50 51 52 53 54
AndExpr              : 41 42 43
AssignExpr           : 36 38 73 74
Bloco                : 6 10 35
Comando              : 24 25 32 33 33 34
CondExpr             : 37 40
DeclFunc             : 4
DeclFuncVar          : 1 2 3 4
DeclProg             : 1
DeclVar              : 2 3 7 8 20 21
DesigExpr            : 45 46 47 48 49 50 51
EqExpr               : 43 44 45 46
Expr                 : 27 29 32 33 34 40 63 67 72
LValueExpr           : 28 38
ListExpr             : 65 74
ListaComando         : 17 25
ListaDeclVar         : 17 18 20 21
ListaParametros      : 10
ListaParametrosCont  : 12 15 16
MulExpr              : 53 54 55 56 57 58
OrExpr               : 39 40 41
PrimExpr             : 60 61 62
Programa             : 0
Tipo                 : 2 3 4 13 14 15 16 20 21
UnExpr               : 56 57 58 59

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . DeclFuncVar DeclProg
    (2) DeclFuncVar -> . Tipo NOME DeclVar PVIRGULA DeclFuncVar
    (3) DeclFuncVar -> . Tipo NOME ECOCHETE INT DCOCHETE DeclVar PVIRGULA DeclFuncVar
    (4) DeclFuncVar -> . Tipo NOME DeclFunc DeclFuncVar
    (5) DeclFuncVar -> .
    (22) Tipo -> . INT
    (23) Tipo -> . CAR

    PROGRAMA        reduce using rule 5 (DeclFuncVar -> .)
    INT             shift and go to state 4
    CAR             shift and go to state 5

    Programa                       shift and go to state 1
    DeclFuncVar                    shift and go to state 2
    Tipo                           shift and go to state 3

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> DeclFuncVar . DeclProg
    (6) DeclProg -> . PROGRAMA Bloco

    PROGRAMA        shift and go to state 7

    DeclProg                       shift and go to state 6

state 3

    (2) DeclFuncVar -> Tipo . NOME DeclVar PVIRGULA DeclFuncVar
    (3) DeclFuncVar -> Tipo . NOME ECOCHETE INT DCOCHETE DeclVar PVIRGULA DeclFuncVar
    (4) DeclFuncVar -> Tipo . NOME DeclFunc DeclFuncVar

    NOME            shift and go to state 8


state 4

    (22) Tipo -> INT .

    NOME            reduce using rule 22 (Tipo -> INT .)


state 5

    (23) Tipo -> CAR .

    NOME            reduce using rule 23 (Tipo -> CAR .)


state 6

    (1) Programa -> DeclFuncVar DeclProg .

    $end            reduce using rule 1 (Programa -> DeclFuncVar DeclProg .)


state 7

    (6) DeclProg -> PROGRAMA . Bloco
    (17) Bloco -> . ECHAVES ListaDeclVar ListaComando DCHAVES
    (18) Bloco -> . ECHAVES ListaDeclVar DCHAVES

    ECHAVES         shift and go to state 10

    Bloco                          shift and go to state 9

state 8

    (2) DeclFuncVar -> Tipo NOME . DeclVar PVIRGULA DeclFuncVar
    (3) DeclFuncVar -> Tipo NOME . ECOCHETE INT DCOCHETE DeclVar PVIRGULA DeclFuncVar
    (4) DeclFuncVar -> Tipo NOME . DeclFunc DeclFuncVar
    (7) DeclVar -> . VIRGULA NOME DeclVar
    (8) DeclVar -> . VIRGULA NOME ECOCHETE INT DCOCHETE DeclVar
    (9) DeclVar -> .
    (10) DeclFunc -> . EPAREN ListaParametros DPAREN Bloco

    ECOCHETE        shift and go to state 12
    VIRGULA         shift and go to state 14
    PVIRGULA        reduce using rule 9 (DeclVar -> .)
    EPAREN          shift and go to state 15

    DeclVar                        shift and go to state 11
    DeclFunc                       shift and go to state 13

state 9

    (6) DeclProg -> PROGRAMA Bloco .

    $end            reduce using rule 6 (DeclProg -> PROGRAMA Bloco .)


state 10

    (17) Bloco -> ECHAVES . ListaDeclVar ListaComando DCHAVES
    (18) Bloco -> ECHAVES . ListaDeclVar DCHAVES
    (19) ListaDeclVar -> .
    (20) ListaDeclVar -> . Tipo NOME DeclVar PVIRGULA ListaDeclVar
    (21) ListaDeclVar -> . Tipo NOME ECOCHETE INT DCOCHETE DeclVar PVIRGULA ListaDeclVar
    (22) Tipo -> . INT
    (23) Tipo -> . CAR

    DCHAVES         reduce using rule 19 (ListaDeclVar -> .)
    PVIRGULA        reduce using rule 19 (ListaDeclVar -> .)
    RETORNE         reduce using rule 19 (ListaDeclVar -> .)
    LEIA            reduce using rule 19 (ListaDeclVar -> .)
    ESCREVA         reduce using rule 19 (ListaDeclVar -> .)
    NOVALINHA       reduce using rule 19 (ListaDeclVar -> .)
    SE              reduce using rule 19 (ListaDeclVar -> .)
    ENQUANTO        reduce using rule 19 (ListaDeclVar -> .)
    ECHAVES         reduce using rule 19 (ListaDeclVar -> .)
    INT             shift and go to state 4
    CAR             shift and go to state 5

    ListaDeclVar                   shift and go to state 16
    Tipo                           shift and go to state 17

state 11

    (2) DeclFuncVar -> Tipo NOME DeclVar . PVIRGULA DeclFuncVar

    PVIRGULA        shift and go to state 18


state 12

    (3) DeclFuncVar -> Tipo NOME ECOCHETE . INT DCOCHETE DeclVar PVIRGULA DeclFuncVar

    INT             shift and go to state 19


state 13

    (4) DeclFuncVar -> Tipo NOME DeclFunc . DeclFuncVar
    (2) DeclFuncVar -> . Tipo NOME DeclVar PVIRGULA DeclFuncVar
    (3) DeclFuncVar -> . Tipo NOME ECOCHETE INT DCOCHETE DeclVar PVIRGULA DeclFuncVar
    (4) DeclFuncVar -> . Tipo NOME DeclFunc DeclFuncVar
    (5) DeclFuncVar -> .
    (22) Tipo -> . INT
    (23) Tipo -> . CAR

    PROGRAMA        reduce using rule 5 (DeclFuncVar -> .)
    INT             shift and go to state 4
    CAR             shift and go to state 5

    Tipo                           shift and go to state 3
    DeclFuncVar                    shift and go to state 20

state 14

    (7) DeclVar -> VIRGULA . NOME DeclVar
    (8) DeclVar -> VIRGULA . NOME ECOCHETE INT DCOCHETE DeclVar

    NOME            shift and go to state 21


state 15

    (10) DeclFunc -> EPAREN . ListaParametros DPAREN Bloco
    (11) ListaParametros -> .
    (12) ListaParametros -> . ListaParametrosCont
    (13) ListaParametrosCont -> . Tipo NOME
    (14) ListaParametrosCont -> . Tipo NOME ECOCHETE DCOCHETE
    (15) ListaParametrosCont -> . Tipo NOME VIRGULA ListaParametrosCont
    (16) ListaParametrosCont -> . Tipo NOME ECOCHETE DCOCHETE VIRGULA ListaParametrosCont
    (22) Tipo -> . INT
    (23) Tipo -> . CAR

    DPAREN          reduce using rule 11 (ListaParametros -> .)
    INT             shift and go to state 4
    CAR             shift and go to state 5

    ListaParametros                shift and go to state 22
    ListaParametrosCont            shift and go to state 23
    Tipo                           shift and go to state 24

state 16

    (17) Bloco -> ECHAVES ListaDeclVar . ListaComando DCHAVES
    (18) Bloco -> ECHAVES ListaDeclVar . DCHAVES
    (24) ListaComando -> . Comando
    (25) ListaComando -> . Comando ListaComando
    (26) Comando -> . PVIRGULA
    (27) Comando -> . RETORNE Expr PVIRGULA
    (28) Comando -> . LEIA LValueExpr PVIRGULA
    (29) Comando -> . ESCREVA Expr PVIRGULA
    (30) Comando -> . ESCREVA ASPASD NORMALSTRING ASPASD PVIRGULA
    (31) Comando -> . NOVALINHA PVIRGULA
    (32) Comando -> . SE EPAREN Expr DPAREN ENTAO Comando
    (33) Comando -> . SE EPAREN Expr DPAREN ENTAO Comando SENAO Comando
    (34) Comando -> . ENQUANTO EPAREN Expr DPAREN EXECUTE Comando
    (35) Comando -> . Bloco
    (17) Bloco -> . ECHAVES ListaDeclVar ListaComando DCHAVES
    (18) Bloco -> . ECHAVES ListaDeclVar DCHAVES

    DCHAVES         shift and go to state 26
    PVIRGULA        shift and go to state 28
    RETORNE         shift and go to state 29
    LEIA            shift and go to state 30
    ESCREVA         shift and go to state 31
    NOVALINHA       shift and go to state 32
    SE              shift and go to state 33
    ENQUANTO        shift and go to state 34
    ECHAVES         shift and go to state 10

    ListaComando                   shift and go to state 25
    Comando                        shift and go to state 27
    Bloco                          shift and go to state 35

state 17

    (20) ListaDeclVar -> Tipo . NOME DeclVar PVIRGULA ListaDeclVar
    (21) ListaDeclVar -> Tipo . NOME ECOCHETE INT DCOCHETE DeclVar PVIRGULA ListaDeclVar

    NOME            shift and go to state 36


state 18

    (2) DeclFuncVar -> Tipo NOME DeclVar PVIRGULA . DeclFuncVar
    (2) DeclFuncVar -> . Tipo NOME DeclVar PVIRGULA DeclFuncVar
    (3) DeclFuncVar -> . Tipo NOME ECOCHETE INT DCOCHETE DeclVar PVIRGULA DeclFuncVar
    (4) DeclFuncVar -> . Tipo NOME DeclFunc DeclFuncVar
    (5) DeclFuncVar -> .
    (22) Tipo -> . INT
    (23) Tipo -> . CAR

    PROGRAMA        reduce using rule 5 (DeclFuncVar -> .)
    INT             shift and go to state 4
    CAR             shift and go to state 5

    Tipo                           shift and go to state 3
    DeclFuncVar                    shift and go to state 37

state 19

    (3) DeclFuncVar -> Tipo NOME ECOCHETE INT . DCOCHETE DeclVar PVIRGULA DeclFuncVar

    DCOCHETE        shift and go to state 38


state 20

    (4) DeclFuncVar -> Tipo NOME DeclFunc DeclFuncVar .

    PROGRAMA        reduce using rule 4 (DeclFuncVar -> Tipo NOME DeclFunc DeclFuncVar .)


state 21

    (7) DeclVar -> VIRGULA NOME . DeclVar
    (8) DeclVar -> VIRGULA NOME . ECOCHETE INT DCOCHETE DeclVar
    (7) DeclVar -> . VIRGULA NOME DeclVar
    (8) DeclVar -> . VIRGULA NOME ECOCHETE INT DCOCHETE DeclVar
    (9) DeclVar -> .

    ECOCHETE        shift and go to state 40
    VIRGULA         shift and go to state 14
    PVIRGULA        reduce using rule 9 (DeclVar -> .)

    DeclVar                        shift and go to state 39

state 22

    (10) DeclFunc -> EPAREN ListaParametros . DPAREN Bloco

    DPAREN          shift and go to state 41


state 23

    (12) ListaParametros -> ListaParametrosCont .

    DPAREN          reduce using rule 12 (ListaParametros -> ListaParametrosCont .)


state 24

    (13) ListaParametrosCont -> Tipo . NOME
    (14) ListaParametrosCont -> Tipo . NOME ECOCHETE DCOCHETE
    (15) ListaParametrosCont -> Tipo . NOME VIRGULA ListaParametrosCont
    (16) ListaParametrosCont -> Tipo . NOME ECOCHETE DCOCHETE VIRGULA ListaParametrosCont

    NOME            shift and go to state 42


state 25

    (17) Bloco -> ECHAVES ListaDeclVar ListaComando . DCHAVES

    DCHAVES         shift and go to state 43


state 26

    (18) Bloco -> ECHAVES ListaDeclVar DCHAVES .

    $end            reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    PVIRGULA        reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    RETORNE         reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    LEIA            reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    ESCREVA         reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    NOVALINHA       reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    SE              reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    ENQUANTO        reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    ECHAVES         reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    DCHAVES         reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    INT             reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    CAR             reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    PROGRAMA        reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)
    SENAO           reduce using rule 18 (Bloco -> ECHAVES ListaDeclVar DCHAVES .)


state 27

    (24) ListaComando -> Comando .
    (25) ListaComando -> Comando . ListaComando
    (24) ListaComando -> . Comando
    (25) ListaComando -> . Comando ListaComando
    (26) Comando -> . PVIRGULA
    (27) Comando -> . RETORNE Expr PVIRGULA
    (28) Comando -> . LEIA LValueExpr PVIRGULA
    (29) Comando -> . ESCREVA Expr PVIRGULA
    (30) Comando -> . ESCREVA ASPASD NORMALSTRING ASPASD PVIRGULA
    (31) Comando -> . NOVALINHA PVIRGULA
    (32) Comando -> . SE EPAREN Expr DPAREN ENTAO Comando
    (33) Comando -> . SE EPAREN Expr DPAREN ENTAO Comando SENAO Comando
    (34) Comando -> . ENQUANTO EPAREN Expr DPAREN EXECUTE Comando
    (35) Comando -> . Bloco
    (17) Bloco -> . ECHAVES ListaDeclVar ListaComando DCHAVES
    (18) Bloco -> . ECHAVES ListaDeclVar DCHAVES

    DCHAVES         reduce using rule 24 (ListaComando -> Comando .)
    PVIRGULA        shift and go to state 28
    RETORNE         shift and go to state 29
    LEIA            shift and go to state 30
    ESCREVA         shift and go to state 31
    NOVALINHA       shift and go to state 32
    SE              shift and go to state 33
    ENQUANTO        shift and go to state 34
    ECHAVES         shift and go to state 10

    Comando                        shift and go to state 27
    ListaComando                   shift and go to state 44
    Bloco                          shift and go to state 35

state 28

    (26) Comando -> PVIRGULA .

    PVIRGULA        reduce using rule 26 (Comando -> PVIRGULA .)
    RETORNE         reduce using rule 26 (Comando -> PVIRGULA .)
    LEIA            reduce using rule 26 (Comando -> PVIRGULA .)
    ESCREVA         reduce using rule 26 (Comando -> PVIRGULA .)
    NOVALINHA       reduce using rule 26 (Comando -> PVIRGULA .)
    SE              reduce using rule 26 (Comando -> PVIRGULA .)
    ENQUANTO        reduce using rule 26 (Comando -> PVIRGULA .)
    ECHAVES         reduce using rule 26 (Comando -> PVIRGULA .)
    DCHAVES         reduce using rule 26 (Comando -> PVIRGULA .)
    SENAO           reduce using rule 26 (Comando -> PVIRGULA .)


state 29

    (27) Comando -> RETORNE . Expr PVIRGULA
    (36) Expr -> . AssignExpr
    (37) AssignExpr -> . CondExpr
    (38) AssignExpr -> . LValueExpr IGUAL AssignExpr
    (39) CondExpr -> . OrExpr
    (40) CondExpr -> . OrExpr INTERROGACAO Expr DOISP CondExpr
    (63) LValueExpr -> . NOME ECOCHETE Expr DCOCHETE
    (64) LValueExpr -> . NOME
    (41) OrExpr -> . OrExpr OU AndExpr
    (42) OrExpr -> . AndExpr
    (43) AndExpr -> . AndExpr E EqExpr
    (44) AndExpr -> . EqExpr
    (45) EqExpr -> . EqExpr ATRIBUICAO DesigExpr
    (46) EqExpr -> . EqExpr DIFERENTE DesigExpr
    (47) EqExpr -> . DesigExpr
    (48) DesigExpr -> . DesigExpr MENOR AddExpr
    (49) DesigExpr -> . DesigExpr MAIOR AddExpr
    (50) DesigExpr -> . DesigExpr MAIORIGUAL AddExpr
    (51) DesigExpr -> . DesigExpr MENORIGUAL AddExpr
    (52) DesigExpr -> . AddExpr
    (53) AddExpr -> . AddExpr MAIS MulExpr
    (54) AddExpr -> . AddExpr MENOS MulExpr
    (55) AddExpr -> . MulExpr
    (56) MulExpr -> . MulExpr MULTIPLICACAO UnExpr
    (57) MulExpr -> . MulExpr DIVIDE UnExpr
    (58) MulExpr -> . MulExpr MOD UnExpr
    (59) MulExpr -> . UnExpr
    (60) UnExpr -> . MENOS PrimExpr
    (61) UnExpr -> . EXCLAMACAO PrimExpr
    (62) UnExpr -> . PrimExpr
    (65) PrimExpr -> . NOME EPAREN ListExpr DPAREN
    (66) PrimExpr -> . NOME EPAREN DPAREN
    (67) PrimExpr -> . NOME ECOCHETE Expr DCOCHETE
    (68) PrimExpr -> . NOME
    (69) PrimExpr -> . NUMERO
    (70) PrimExpr -> . CAR
    (71) PrimExpr -> . INT
    (72) PrimExpr -> . EPAREN Expr DPAREN

    NOME            shift and go to state 50
    MENOS           shift and go to state 56
    EXCLAMACAO      shift and go to state 59
    NUMERO          shift and go to state 61
    CAR             shift and go to state 62
    INT             shift and go to state 63
    EPAREN          shift and go to state 60

    Expr                           shift and go to state 45
    AssignExpr                     shift and go to state 46
    CondExpr                       shift and go to state 47
    LValueExpr                     shift and go to state 48
    OrExpr                         shift and go to state 49
    AndExpr                        shift and go to state 51
    EqExpr                         shift and go to state 52
    DesigExpr                      shift and go to state 53
    AddExpr                        shift and go to state 54
    MulExpr                        shift and go to state 55
    UnExpr                         shift and go to state 57
    PrimExpr                       shift and go to state 58

state 30

    (28) Comando -> LEIA . LValueExpr PVIRGULA
    (63) LValueExpr -> . NOME ECOCHETE Expr DCOCHETE
    (64) LValueExpr -> . NOME

    NOME            shift and go to state 65

    LValueExpr                     shift and go to state 64

state 31

    (29) Comando -> ESCREVA . Expr PVIRGULA
    (30) Comando -> ESCREVA . ASPASD NORMALSTRING ASPASD PVIRGULA
    (36) Expr -> . AssignExpr
    (37) AssignExpr -> . CondExpr
    (38) AssignExpr -> . LValueExpr IGUAL AssignExpr
    (39) CondExpr -> . OrExpr
    (40) CondExpr -> . OrExpr INTERROGACAO Expr DOISP CondExpr
    (63) LValueExpr -> . NOME ECOCHETE Expr DCOCHETE
    (64) LValueExpr -> . NOME
    (41) OrExpr -> . OrExpr OU AndExpr
    (42) OrExpr -> . AndExpr
    (43) AndExpr -> . AndExpr E EqExpr
    (44) AndExpr -> . EqExpr
    (45) EqExpr -> . EqExpr ATRIBUICAO DesigExpr
    (46) EqExpr -> . EqExpr DIFERENTE DesigExpr
    (47) EqExpr -> . DesigExpr
    (48) DesigExpr -> . DesigExpr MENOR AddExpr
    (49) DesigExpr -> . DesigExpr MAIOR AddExpr
    (50) DesigExpr -> . DesigExpr MAIORIGUAL AddExpr
    (51) DesigExpr -> . DesigExpr MENORIGUAL AddExpr
    (52) DesigExpr -> . AddExpr
    (53) AddExpr -> . AddExpr MAIS MulExpr
    (54) AddExpr -> . AddExpr MENOS MulExpr
    (55) AddExpr -> . MulExpr
    (56) MulExpr -> . MulExpr MULTIPLICACAO UnExpr
    (57) MulExpr -> . MulExpr DIVIDE UnExpr
    (58) MulExpr -> . MulExpr MOD UnExpr
    (59) MulExpr -> . UnExpr
    (60) UnExpr -> . MENOS PrimExpr
    (61) UnExpr -> . EXCLAMACAO PrimExpr
    (62) UnExpr -> . PrimExpr
    (65) PrimExpr -> . NOME EPAREN ListExpr DPAREN
    (66) PrimExpr -> . NOME EPAREN DPAREN
    (67) PrimExpr -> . NOME ECOCHETE Expr DCOCHETE
    (68) PrimExpr -> . NOME
    (69) PrimExpr -> . NUMERO
    (70) PrimExpr -> . CAR
    (71) PrimExpr -> . INT
    (72) PrimExpr -> . EPAREN Expr DPAREN

    ASPASD          shift and go to state 67
    NOME            shift and go to state 50
    MENOS           shift and go to state 56
    EXCLAMACAO      shift and go to state 59
    NUMERO          shift and go to state 61
    CAR             shift and go to state 62
    INT             shift and go to state 63
    EPAREN          shift and go to state 60

    Expr                           shift and go to state 66
    AssignExpr                     shift and go to state 46
    CondExpr                       shift and go to state 47
    LValueExpr                     shift and go to state 48
    OrExpr                         shift and go to state 49
    AndExpr                        shift and go to state 51
    EqExpr                         shift and go to state 52
    DesigExpr                      shift and go to state 53
    AddExpr                        shift and go to state 54
    MulExpr                        shift and go to state 55
    UnExpr                         shift and go to state 57
    PrimExpr                       shift and go to state 58

state 32

    (31) Comando -> NOVALINHA . PVIRGULA

    PVIRGULA        shift and go to state 68


state 33

    (32) Comando -> SE . EPAREN Expr DPAREN ENTAO Comando
    (33) Comando -> SE . EPAREN Expr DPAREN ENTAO Comando SENAO Comando

    EPAREN          shift and go to state 69


state 34

    (34) Comando -> ENQUANTO . EPAREN Expr DPAREN EXECUTE Comando

    EPAREN          shift and go to state 70


state 35

    (35) Comando -> Bloco .
